--- a/index.html
+++ b/index.html
@@ -437,6 +437,28 @@
             </li>
           </ul>
         </div>
+        <div>
+          <p class="footer-media-text">Subscribe</p>
+          <div class="footer-subscribe">
+            <form class="subscribe-form">
+              <input
+                class="subscribe-input"
+                type="text"
+                name="subscribe-form"
+                id="subscribe"
+                placeholder="E-mail"
+              />
+              <label class="subscribe-label" for="subscribe"></label>
+            </form>
+            <button class="subscribe-button" type="submit">
+              Subscribe<svg width="24" height="24">
+                <use
+                  href="./images/icons-svg.svg#icon-subscribe-item-svg"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -446,6 +468,63 @@
             <use href="./images/icons-svg.svg#icon-close-black-svg"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form" name="modal-form">
+          <div class="modal-form-areas">
+            <label class="modal-labels" for="username">Name</label>
+            <div class="input-wrap">
+              <input class="modal-inputs" type="text" name="username" />
+              <svg class="modal-images" width="18" height="24">
+                <use href="./images/icons-svg.svg#icon-modal-svg-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-areas">
+            <label class="modal-labels" for="phone">Phone</label>
+            <div class="input-wrap">
+              <input class="modal-inputs" type="text" name="phone" />
+              <svg class="modal-images" width="18" height="24">
+                <use href="./images/icons-svg.svg#icon-modal-svg-2"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-areas">
+            <label class="modal-labels" for="email">Email</label>
+            <div class="input-wrap">
+              <input class="modal-inputs" type="text" name="email" />
+              <svg class="modal-images" width="18" height="24">
+                <use href="./images/icons-svg.svg#icon-modal-svg-3"></use>
+              </svg>
+            </div>
+          </div>
+          <label class="modal-labels" for="feedback"
+            >Comment<textarea
+              class="modal-textarea"
+              name="feedback"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <div class="policy-field">
+            <input
+              class="modal-input-accept visually-hidden"
+              type="checkbox"
+              name="accept"
+              value="accept"
+              id="privacy"
+            /><label class="modal-accept" for="privacy"
+              ><span>
+                <svg class="modal-checked" width="10" height="8">
+                  <use
+                    href="./images/icons-svg.svg#icon-modal-svg-accept"
+                  ></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+        </form>
+        <button class="modal-submit-button" type="submit">Send</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
