--- a/portfolio.html
+++ b/portfolio.html
@@ -206,6 +206,28 @@
             </li>
           </ul>
         </div>
+        <div>
+          <p class="footer-media-text">Subscribe</p>
+          <div class="footer-subscribe">
+            <form class="subscribe-form">
+              <input
+                class="subscribe-input"
+                type="text"
+                name="subscribe-form"
+                id="subscribe"
+                placeholder="E-mail"
+              />
+              <label class="subscribe-label" for="subscribe"></label>
+            </form>
+            <button class="subscribe-button" type="submit">
+              Subscribe<svg width="24" height="24">
+                <use
+                  href="./images/icons-svg.svg#icon-subscribe-item-svg"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
 </html>
