--- a/index.html
+++ b/index.html
@@ -473,7 +473,12 @@
           <div class="modal-form-areas">
             <label class="modal-labels" for="username">Name</label>
             <div class="input-wrap">
-              <input class="modal-inputs" type="text" name="username" />
+              <input
+                class="modal-inputs"
+                type="text"
+                name="username"
+                id="username"
+              />
               <svg class="modal-images" width="18" height="24">
                 <use href="./images/icons-svg.svg#icon-modal-svg-1"></use>
               </svg>
@@ -482,7 +487,7 @@
           <div class="modal-form-areas">
             <label class="modal-labels" for="phone">Phone</label>
             <div class="input-wrap">
-              <input class="modal-inputs" type="text" name="phone" />
+              <input class="modal-inputs" type="text" name="phone" id="phone" />
               <svg class="modal-images" width="18" height="24">
                 <use href="./images/icons-svg.svg#icon-modal-svg-2"></use>
               </svg>
@@ -491,7 +496,7 @@
           <div class="modal-form-areas">
             <label class="modal-labels" for="email">Email</label>
             <div class="input-wrap">
-              <input class="modal-inputs" type="text" name="email" />
+              <input class="modal-inputs" type="text" name="email" id="email" />
               <svg class="modal-images" width="18" height="24">
                 <use href="./images/icons-svg.svg#icon-modal-svg-3"></use>
               </svg>
@@ -502,6 +507,7 @@
               class="modal-textarea"
               name="feedback"
               placeholder="Text input"
+              id="feedback"
             ></textarea>
           </label>
           <div class="policy-field">
